@@ -49,7 +49,8 @@ sources =		 			\
 	TypeFundamentals.cs			\
 	UnwrappedObject.cs			\
 	ValueArray.cs				\
-	Value.cs
+	Value.cs				\
+	WeakObject.cs
 
 build_sources = $(addprefix $(srcdir)/, $(sources)) ../AssemblyInfo.cs
 dist_sources = $(sources)
